removing akka